maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: illegal start of simple expression
    for (y <- 0 to yMax)) {
                        ^